@@ -55,13 +55,16 @@ if (!urlToHttpOptions) {
     }
     return options
   }
-} else if (semver.satisfies(process.version, '>=19.9.0 <20')) {
+} else if (semver.satisfies(process.version, '>=19.9.0 <20') ||
+    semver.satisfies(process.version, '>=18.17.0 <19')) {
   // Starting in node v19.9.0 (as of https://github.com/nodejs/node/pull/46989)
   // `urlToHttpOptions(url)` returns an object which is considered a `url`
   // argument by `http.request()` -- because of the internal `isURL(url)` test.
+  // Starting with node v18.17.0, the same is true with the internal switch
+  // to the "Ada" lib for URL parsing.
   safeUrlToHttpOptions = function (url) {
     const options = urlToHttpOptions(url)
-    // Specically we are dropping the `Symbol(context)` field.
+    // Specifically we are dropping the `Symbol(context)` field.
     Object.getOwnPropertySymbols(options).forEach(sym => {
       delete options[sym]
     })
